petro sim analysis title image

--- a/analysis/petroleum_sim_analysis.ipynb
+++ b/analysis/petroleum_sim_analysis.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# Petroleum and Natural Gas Upstream Simulation and Analysis\n",
     "## A Historical E&P Look at the Wasson Oil Field\n",
-    "Project by John Stobba"
+    "Project by John Stobba\n",
+    "\n",
+    "![petroleum_sim_analysis Title Image](images/petroleum_sim_analysis_title.jpg)"
    ]
   },
   {
